--- a/firmware/iot_device/bsp_stm32f401ccu6_blackpill/.vscode/settings.json
+++ b/firmware/iot_device/bsp_stm32f401ccu6_blackpill/.vscode/settings.json
@@ -1,30 +1,29 @@
 {
-    "editor.fontSize": 13,
-    "editor.formatOnSave": true,
-    "clang-format.fallbackStyle": "Google",
-    "editor.wordWrapColumn": 80,
-    "editor.rulers": [
-        80
-    ],
-    "[c]": {
-        "editor.defaultFormatter": "xaver.clang-format"
-    },
-    "clang-format.language.c.fallbackStyle": "google",
-    "clang-format.language.c.style": "file",
-    "clang-format.language.cpp.style": "file",
-    "clang-format.language.cpp.fallbackStyle": "google",
-    "cmake.configureOnOpen": true,
+    "cSpell.ignoreRegExpList": ["\\b[0-9A-Z_]+\\b"],
     "cmake.generator": "Ninja",
-    "cmake.configureSettings": {
-        "CMAKE_TOOLCHAIN_FILE": "CMakeToolchain.cmake"
-    },
-    "cmake.saveBeforeBuild": true,
-    "git.openRepositoryInParentFolders": "never",
-    "explorer.confirmDelete": false,
-    "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
-    "cortex-debug.armToolchainPath": "C:/arm_development_tools/arm_gnu_toolchain-13.2.1/bin",
-    "cortex-debug.openocdPath": "C:/arm_development_tools/openocd-0.12.0/bin/openocd.exe",
-    "files.associations": {
-        "usart.h": "c"
-    }
+    "cmake.buildDirectory" : "${workspaceRoot}/build/${buildType}",
+    "cmake.configureEnvironment": { "CMAKE_EXPORT_COMPILE_COMMANDS": "on", "CMAKE_USER_HOME": "${userHome}" },
+    // cortex-debug (Windows).
+    "cortex-debug.pyocdPath.windows": "pyocd",
+    "cortex-debug.gdbPath.windows": "${env:USERPROFILE}/scoop/apps/gcc-arm-none-eabi/current/bin/arm-none-eabi-gdb.exe",
+    "cortex-debug.stutilPath.windows": "st-util.exe",
+    "cortex-debug.stlinkPath.windows": "ST-LINK_gdbserver.exe",
+    "cortex-debug.JLinkGDBServerPath.windows": "JLinkGDBServerCL.exe",
+    "cortex-debug.openocdPath.windows": "${env:USERPROFILE}/scoop/apps/openocd/current/bin/openocd.exe",
+    // cortex-debug (Linux).
+    "cortex-debug.gdbPath.linux": "${env:HOME}/xpack-arm-none-eabi-gcc-13.2.1-1.1/bin/arm-none-eabi-gdb",
+    "cortex-debug.pyocdPath.linux": "pyocd",
+    "cortex-debug.stutilPath.linux": "st-util",
+    //"cortex-debug.stlinkPath.linux": "ST-LINK_gdbserver",
+    "cortex-debug.JLinkGDBServerPath.linux": "JLinkGDBServerCLExe",
+    "cortex-debug.openocdPath.linux": "openocd",
+    // Настройки проекта.
+    "executable": "${command:cmake.buildDirectory}/${workspaceFolderBasename}.elf",
+    "device": "STM32F030R8",
+    "svdFile" : "${workspaceRoot}/debugger/svd/STM32F030.svd",
+    "targetFamily": "stm32f0x",
+    //"jlink-id": "nucleo-f030", //-usb ${config:jlink-id}
+    "toolchain": "${env:USERPROFILE}/scoop/apps/gcc-arm-none-eabi/current"
+    //"toolchain": "${env:USERPROFILE}/xpack-arm-none-eabi-gcc-13.2.1-1.1"
+    //"toolchain": "${env:HOME}/xpack-arm-none-eabi-gcc-13.2.1-1.1"
 }
