W25Q: got correct FLASH ID

--- a/firmware/iot_device/bsp_stm32f401ccu6_blackpill/.vscode/launch.json
+++ b/firmware/iot_device/bsp_stm32f401ccu6_blackpill/.vscode/launch.json
@@ -27,11 +27,11 @@
       "type" : "cortex-debug",
       "servertype" : "openocd",
       "device" : "${config:device}",
-      "preLaunchTask" : "CMake: build",
+      // "preLaunchTask" : "CMake: build",
       //"preLaunchCommands" : [ "monitor arm semihosting enable" ],
       "preRestartCommands" : [ "load", "enable breakpoint", "monitor reset" ],
       "runToEntryPoint" : "main",
-      //"showDevDebugOutput" : "raw",
+      "showDevDebugOutput" : "raw",
       "svdFile" : "${config:svdFile}",
       "liveWatch": { "enabled": false, "samplesPerSecond": 4 },
       "configFiles": [ "interface/stlink.cfg", "target/${config:targetFamily}.cfg" ]
